--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-\.gradle
-\.idea
-\build
+build/
+gradle/
+!**/src/main/**
+!**/src/test/**
+
+## IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### Gradle ###
+.gradle
+
+### Logs ###
 *.log
-*.class
